# mpr

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  check.hpp  clause.hpp  gpu_interval.hpp  image.hpp  libfive-cuda.cpp  libfive-cuda.cu  parameters.hpp  prospero.io  renderable.cu  renderable.hpp  run_benchmarks.sh  subtape.hpp  tape.cpp  tape.hpp  tiles.hpp
benchmark/: CMakeLists.txt  brute.cpp  brute.cu  circle.cpp  csg_anim.cpp  donut.cpp  dump_tape.cpp  libfive-cuda.cpp  print_tape_table.cpp  render_2d.cpp  render_2d_heatmap.cpp  render_2d_table.cpp  render_3d.cpp  render_3d_anim.cpp  render_3d_heatmap.cpp  render_3d_multi.cpp  render_3d_table.cpp  render_effects.cpp  ssao.cpp  stats.cpp  stats.hpp  tape_building_time.cpp  tape_shortening.cpp  tape_size.cpp  v2.cpp  v3.cpp
benchmark/files/: architecture.frep  architecture_norot.frep  architecture_rot.frep  bear_rot.frep  hello_world.frep  hello_world_3d.frep  idol_rot.frep  involute_gear.frep  involute_gear_2d.frep  involute_gear_3d.frep  involute_gear_rot_3d.frep  menger_rot.frep  menger_sphere.frep  prospero.frep  prospero_long.frep
gui/: CMakeLists.txt  Info.plist  interpreter.cpp  interpreter.hpp  main.cpp  tex.cu  tex.hpp
gui/common/inc/: base.h  log.h  object.h  platform.h  rect.h  shader.h  texture.h
gui/common/platform/: posix.c
gui/common/src/: log.c  rect.c  shader.c  texture.c
gui/examples/: architecture.io  bear.io  deocube.io  hello_world.io  involute_gear.io  menger_rot.io  menger_sphere.io  prospero_long.io
gui/imgui-color-text-edit/: TextEditor.cpp  TextEditor.h
inc/: check.hpp  clause.hpp  context.hpp  effects.hpp  filled.hpp  gpu_affine.hpp  gpu_deriv.hpp  gpu_interval.hpp  gpu_opcode.hpp  image.hpp  parameters.hpp  queue.hpp  renderable.hpp  renderable_parameters.hpp  renderable_tape.hpp  subtapes.hpp  tape.hpp  tiles.hpp  util.hpp  v2.hpp  v3.hpp  view.hpp
lib/: CMakeLists.txt  check.hpp  gpu_deriv.hpp  gpu_interval.hpp  image.hpp  parameters.hpp  renderable.cu  renderable.hpp  subtapes.hpp  tape.cpp  tiles.hpp  view.hpp
src/: CMakeLists.txt  context.cpp  context.cu  effects.cu  gpu_opcode.cu  renderable.cu  renderable_tape.cpp  tape.cpp  v2.cu  v3.cu
